--- a/index-thanay.htm
+++ b/index-thanay.htm
@@ -1438,7 +1438,7 @@
                         <p class="testimonial-text">HOPE transformed our online presence with a stunning website that perfectly captures our brand identity. Their attention to detail and technical expertise exceeded our expectations.</p>
                         <div class="testimonial-author">
                             <div class="author-avatar">
-                                <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" alt="Sarah Johnson">
+                                <img src="/img/thanay.jpg" alt="Sarah Johnson">
                             </div>
                             <h4 class="author-name">Sarah Johnson</h4>
                             <p class="author-title">CEO, TechStart Inc.</p>
