--- a/cse-register.htm
+++ b/cse-register.htm
@@ -204,7 +204,7 @@
             font-size: 1.25rem;
             font-weight: 700;
             margin-bottom: 0.75rem;
-            color: var(--text-primary);
+            color: white;
         }
 
         .card-meta {
