--- a/cse-register.htm
+++ b/cse-register.htm
@@ -175,7 +175,7 @@
 
         .btn-danger {
             background: var(--gradient-3);
-            color: white;
+            color: rgb(255, 255, 255);
         }
 
         .btn-danger:hover {
