--- a/rai.htm
+++ b/rai.htm
@@ -207,6 +207,7 @@
         .card {
             background: var(--glass-bg);
             border: 1px solid var(--glass-border);
+            color: white;
             border-radius: 0.75rem;
             transition: all 0.3s ease;
             height: 100%;
