updating the color check 2

--- a/rai.htm
+++ b/rai.htm
@@ -25,7 +25,7 @@
             --dark: #0a0a0a;
             --darker: #050505;
             --light: #ffffff;
-            --gray: #6c757d;
+            --gray: #ffffff;
             --light-gray: #f8f9fa;
             --border: #2d3748;
             --glass-bg: rgba(255, 255, 255, 0.05);
