--- a/rai.htm
+++ b/rai.htm
@@ -27,7 +27,7 @@
             --light: #ffffff;
             --gray: #ffffff;
             --light-gray: #f8f9fa;
-            --border: #2d3748;
+            --border: #ffffff;
             --glass-bg: rgba(255, 255, 255, 0.05);
             --glass-border: rgba(255, 255, 255, 0.1);
         }
