background-photo-change

--- a/civil-registration-afthab.htm
+++ b/civil-registration-afthab.htm
@@ -570,7 +570,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="glass-section floating">
-                        <img src="https://picsum.photos/seed/zenorix2025/600/400.jpg" alt="ZENORIX 2025 Hero" class="img-fluid rounded">
+                        <img src="https://media.istockphoto.com/id/1448349078/photo/cement-bags-o-sacks-isolated-on-white.jpg?s=612x612&w=0&k=20&c=F5_VosP_qf9xYgyVth-Vs3OsSjaL0gZBMae39zZ3Zmg=" alt="ZENORIX 2025 Hero" class="img-fluid rounded">
                     </div>
                 </div>
             </div>
