--- a/rai.htm
+++ b/rai.htm
@@ -1034,8 +1034,8 @@
                                 <div class="col-md-8">
                                     <h4><i class="bi bi-robot"></i> Robot Battle Royale</h4>
                                     <div class="text-muted mb-2">
-                                        <i class="bi bi-clock"></i> 16:30-18:00 | 
-                                        <i class="bi bi-geo-alt"></i> Main Arena
+                                        <i class="bi bi-clock"></i> <p>16:30-18:00 | </p>
+                                        <i class="bi bi-geo-alt"></i><p>Main Arena</p> 
                                     </div>
                                     <p>Watch student-built robots compete in an epic battle arena</p>
                                 </div>
