--- a/rai.htm
+++ b/rai.htm
@@ -1033,10 +1033,7 @@
                             <div class="row align-items-center">
                                 <div class="col-md-8">
                                     <h4><i class="bi bi-robot"></i> Robot Battle Royale</h4>
-                                    <div class="mb-2">
-                                        <i class="bi bi-clock"></i> <p>16:30-18:00 | </p>
-                                        <i class="bi bi-geo-alt"></i><p>Main Arena</p> 
-                                    </div>
+                                    <p><i class="bi bi-clock">16:30-18:00 | </i> <i class="bi bi-geo-alt">Main Arena</i></p>
                                     <p>Watch student-built robots compete in an epic battle arena</p>
                                 </div>
                                 <div class="col-md-4">
