--- a/rai.htm
+++ b/rai.htm
@@ -1056,10 +1056,10 @@
                             <div class="row align-items-center">
                                 <div class="col-md-8">
                                     <h4><i class="bi bi-cpu"></i> AI Workshop: Neural Networks</h4>
-                                    <div class="text-muted mb-2">
-                                        <i class="bi bi-clock"></i> 14:30-16:00 | 
-                                        <i class="bi bi-geo-alt"></i> AI Lab 1
-                                    </div>
+                                    
+                                        <i class="bi bi-clock"> 14:30-16:00 | </i>
+                                        <i class="bi bi-geo-alt"> AI Lab 1</i>
+                                    
                                     <p>Learn to build AI models using Python and TensorFlow</p>
                                 </div>
                                 <div class="col-md-4">
