--- a/rai.htm
+++ b/rai.htm
@@ -1082,10 +1082,8 @@
                             <div class="row align-items-center">
                                 <div class="col-md-8">
                                     <h4><i class="bi bi-vr"></i> VR Robot Simulator</h4>
-                                    <div class="text-muted mb-2">
-                                        <i class="bi bi-clock"></i> 18:30-20:00 | 
-                                        <i class="bi bi-geo-alt"></i> VR Lab
-                                    </div>
+                                        <i class="bi bi-clock">18:30-20:00 | </i> 
+                                        <i class="bi bi-geo-alt">VR Lab</i> 
                                     <p>Experience robot control through virtual reality</p>
                                 </div>
                                 <div class="col-md-4">
@@ -1110,10 +1108,8 @@
                             <div class="row align-items-center">
                                 <div class="col-md-8">
                                     <h4><i class="bi bi-trophy"></i> Robotics Competition Finals</h4>
-                                    <div class="text-muted mb-2">
-                                        <i class="bi bi-clock"></i> 10:00-12:00 | 
-                                        <i class="bi bi-geo-alt"></i> Main Arena
-                                    </div>
+                                        <i class="bi bi-clock">10:00-12:00 |</i>  
+                                        <i class="bi bi-geo-alt">Main Arena</i> 
                                     <p>Championship round for the best robot teams</p>
                                 </div>
                                 <div class="col-md-4">
