--- a/cse-register.htm
+++ b/cse-register.htm
@@ -733,34 +733,34 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <h1 class="hero-title animate-fadeInUp">CS TechFest Nexus 2025</h1>
-                    <p class="hero-subtitle animate-fadeInUp">A Premier Computer Science Festival Featuring AI, Cybersecurity, Web3 & Quantum Computing</p>
-                    <div class="d-flex flex-wrap gap-3 animate-fadeInUp">
-                        <a href="#events" class="btn btn-primary">Explore Events</a>
-                        <a href="#schedule" class="btn btn-secondary">View Schedule</a>
-                        <a href="tel:+919876543210" class="btn btn-danger">Call Coordinator</a>
-                    </div>
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+                <h1 class="hero-title animate-fadeInUp">Algo Nirva 5.0</h1>
+                <p class="hero-subtitle animate-fadeInUp">Hack the Norm, Code the Future, Byte the Dream — A Thrilling Intercollegiate Tech Fest by CESA, IESCE</p>
+                <div class="d-flex flex-wrap gap-3 animate-fadeInUp">
+                    <a href="#events" class="btn btn-primary">Explore Events</a>
+                    <a href="#schedule" class="btn btn-secondary">View Schedule</a>
+                    <a href="tel:+919526796507" class="btn btn-danger">Call Coordinator</a> <!-- Anaswara Dinesh - Main Faculty Coordinator -->
                 </div>
-                <div class="col-lg-6">
-                    <div class="text-center">
-                        <div class="cpu-3d-container">
-                            <div class="cpu-3d" id="cpu3d">
-                                <div class="cpu-face front"><i class="bi bi-cpu"></i></div>
-                                <div class="cpu-face back"><i class="bi bi-cpu"></i></div>
-                                <div class="cpu-face right"><i class="bi bi-cpu"></i></div>
-                                <div class="cpu-face left"><i class="bi bi-cpu"></i></div>
-                                <div class="cpu-face top"><i class="bi bi-cpu"></i></div>
-                                <div class="cpu-face bottom"><i class="bi bi-cpu"></i></div>
-                            </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="text-center">
+                    <div class="cpu-3d-container">
+                        <div class="cpu-3d" id="cpu3d">
+                            <div class="cpu-face front"><i class="bi bi-terminal-fill"></i></div> <!-- More relevant than CPU -->
+                            <div class="cpu-face back"><i class="bi bi-code-slash"></i></div>
+                            <div class="cpu-face right"><i class="bi bi-shield-lock"></i></div> <!-- For CTF/Cyber -->
+                            <div class="cpu-face left"><i class="bi bi-controller"></i></div> <!-- For Gaming -->
+                            <div class="cpu-face top"><i class="bi bi-palette"></i></div> <!-- For Canva/Creatitech -->
+                            <div class="cpu-face bottom"><i class="bi bi-lightning"></i></div> <!-- For Energy/Fun -->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Stats Section -->
     <section class="py-5">
