--- a/rai.htm
+++ b/rai.htm
@@ -1430,7 +1430,7 @@
                                 </button>
                             </h2>
                             <div id="faq1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
-                                <div class="accordion-body">
+                                <div class="accordion-body color:white:">
                                     Food is available at the Food Court located in the South Wing. Operating hours are 12:00 PM - 3:00 PM and 6:00 PM - 8:00 PM. We offer vegetarian and non-vegetarian options.
                                 </div>
                             </div>
@@ -1492,7 +1492,7 @@
             </div>
         </section>
 
-        <!-- Swag Section -->
+        <!-- Swag Section --
         <section id="swag" class="section">
             <div class="container">
                 <h1 class="text-center mb-4 fade-in">
@@ -1558,7 +1558,7 @@
                 </div>
             </div>
         </section>
-    </main>
+    </main>-->
 
     <!-- Modals -->
     <div class="modal fade" id="aiHackModal" tabindex="-1">
