--- a/cse-register.htm
+++ b/cse-register.htm
@@ -976,61 +976,133 @@
 
     <!-- Schedule Section -->
     <section id="schedule" class="py-5">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">Event Schedule</h2>
-                <p class="section-subtitle">Day-wise timeline of all activities and sessions</p>
+    <div class="container">
+        <div class="section-header">
+            <h2 class="section-title">Event Schedule</h2>
+            <p class="section-subtitle">Official day-wise timeline of all events at IES College of Engineering</p>
+        </div>
+
+        <div class="row">
+            <!-- DAY 1: SEPTEMBER 26, 2025 -->
+            <div class="col-lg-6">
+                <h3 class="mb-4">📅 Day 1 — Friday, September 26, 2025</h3>
+                <div class="timeline">
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">11:00 AM</div>
+                        <h4>Decodex — Coding Challenge</h4>
+                        <p><strong>Room 201</strong> — Logic puzzles & rapid-fire quizzes testing problem-solving skills. ₹50 entry.</p>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">11:00 AM</div>
+                        <h4>Shadow Script — Blind Coding</h4>
+                        <p><strong>Lab 3</strong> — Code without seeing the screen! Tests memory & logic. ₹50 entry.</p>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">11:00 AM</div>
+                        <h4>PC Pit Stop — Computer Assembly</h4>
+                        <p><strong>Lab 4</strong> — Assemble & troubleshoot hardware systems. ₹50 entry.</p>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">11:00 AM</div>
+                        <h4>Creatitech — Canva Designing</h4>
+                        <p><strong>Lab 2</strong> — Design posters, banners using Canva. ₹50 entry.</p>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">11:00 AM</div>
+                        <h4>Blind Beats — Fun Zone</h4>
+                        <p><strong>Room 205</strong> — Treasure hunts, meme contests, team games. ₹20 entry. Runs all day.</p>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">11:00 AM</div>
+                        <h4>Pavilion — Project Expo</h4>
+                        <p><strong>Frontage of Library</strong> — Showcase of student tech projects. Free entry. Runs both days.</p>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">02:00 PM</div>
+                        <h4>Error 404 — Bug Not Found</h4>
+                        <p><strong>Lab 3</strong> — Debug given code under time pressure. ₹75 entry.</p>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">02:04 PM</div>
+                        <h4>Gaming Console — Valorant Tournament</h4>
+                        <p><strong>Room 202</strong> — Competitive Valorant matches. ₹50 entry. 30 mins per match.</p>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">02:00 PM</div>
+                        <h4>Cipher Strike — Capture The Flag</h4>
+                        <p><strong>Lab 4</strong> — Solve crypto, web, reverse engineering challenges. ₹75 entry.</p>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">02:00 PM</div>
+                        <h4>Mind Spark — Ideathon</h4>
+                        <p><strong>Room 204</strong> — Pitch innovative tech solutions. ₹250/team.</p>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">11:00 AM</div>
+                        <h4>Soapy Football</h4>
+                        <p><strong>Basketball Court</strong> — Slippery, soapy football fun! ₹699.99/team.</p>
+                    </div>
+
+                </div>
             </div>
 
-            <div class="row">
-                <div class="col-lg-6">
-                    <h3 class="mb-4">Day 1</h3>
-                    <div class="timeline">
-                        <div class="timeline-item">
-                            <div class="timeline-time">09:00 AM</div>
-                            <h4>Inauguration Ceremony</h4>
-                            <p>Opening ceremony with keynote addresses from industry leaders and academic experts.</p>
-                        </div>
-                        <div class="timeline-item">
-                            <div class="timeline-time">11:00 AM</div>
-                            <h4>Web3 & Smart Contracts Workshop</h4>
-                            <p>Hands-on workshop covering blockchain development, smart contracts, and dApp creation.</p>
-                        </div>
-                        <div class="timeline-item">
-                            <div class="timeline-time">02:00 PM</div>
-                            <h4>Hack the Planet: CTF</h4>
-                            <p>Cybersecurity competition featuring penetration testing challenges and flag capture.</p>
-                        </div>
-                        <div class="timeline-item">
-                            <div class="timeline-time">04:00 PM</div>
-                            <h4>AI/ML Project Showcase</h4>
-                            <p>Student presentations of machine learning projects and AI applications.</p>
-                        </div>
+            <!-- DAY 2: SEPTEMBER 27, 2025 -->
+            <div class="col-lg-6">
+                <h3 class="mb-4">📅 Day 2 — Saturday, September 27, 2025</h3>
+                <div class="timeline">
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">11:00 AM</div>
+                        <h4>Workshops — Canva, Networking, Web Dev</h4>
+                        <p><strong>Lab 1</strong> — Hands-on learning sessions. Free or TBA. Runs till 4:00 PM.</p>
                     </div>
-                </div>
-                <div class="col-lg-6">
-                    <h3 class="mb-4">Day 2</h3>
-                    <div class="timeline">
-                        <div class="timeline-item">
-                            <div class="timeline-time">10:00 AM</div>
-                            <h4>Quantum Computing Workshop</h4>
-                            <p>Introduction to quantum computing concepts and practical applications.</p>
-                        </div>
-                        <div class="timeline-item">
-                            <div class="timeline-time">02:00 PM</div>
-                            <h4>Zero-Day Exploits Live Demo</h4>
-                            <p>Live demonstration of vulnerability discovery and ethical hacking techniques.</p>
-                        </div>
-                        <div class="timeline-item">
-                            <div class="timeline-time">05:00 PM</div>
-                            <h4>Closing Ceremony & Awards</h4>
-                            <p>Prize distribution, recognition of winners, and closing remarks.</p>
-                        </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">11:00 AM</div>
+                        <h4>Valorant — Encore Reloaded</h4>
+                        <p><strong>CSE Lab 1</strong> — High-stakes tournament. ₹10,000 prize pool.</p>
                     </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">11:00 AM</div>
+                        <h4>Blind Beats — Fun Zone (Contd.)</h4>
+                        <p><strong>Room 205</strong> — More games, memes, and chaos. ₹20 entry.</p>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">11:00 AM</div>
+                        <h4>Pavilion — Project Expo (Contd.)</h4>
+                        <p><strong>Frontage of Library</strong> — Day 2 of student project showcase. Free entry.</p>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">02:04 PM</div>
+                        <h4>Gaming Console — Valorant Finals</h4>
+                        <p><strong>Room 202</strong> — Grand finals & winner announcement.</p>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-time">04:00 PM</div>
+                        <h4>Closing Ceremony & Prize Distribution</h4>
+                        <p><strong>Main Stage / Pavilion Area</strong> — Winners announced. Speeches by HOD & Principal.</p>
+                    </div>
+
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Tracks Section -->
     <section id="tracks" class="py-5">
