--- a/cse-register.htm
+++ b/cse-register.htm
@@ -1159,7 +1159,7 @@
         </div>
     </section>
 
-    <!-- Map Section -->
+    <!-- Map Section --
     <section id="map" class="py-5">
         <div class="container">
             <div class="section-header">
@@ -1186,7 +1186,7 @@
         </div>
     </section>
 
-    <!-- Leaderboard Section -->
+    <!-- Leaderboard Section --
     <section id="leaderboard" class="py-5">
         <div class="container">
             <div class="section-header">
