--- a/cse-register.htm
+++ b/cse-register.htm
@@ -19,8 +19,8 @@
             --accent-color: #ff6b6b;
             --dark-bg: #0a0e1a;
             --card-bg: #151923;
-            --text-primary: #e4e6eb;
-            --text-secondary: #b0b3b8;
+            --text-primary: #ffffff;
+            --text-secondary: #f8fbff;
             --border-color: #2a3441;
             --gradient-1: linear-gradient(135deg, #00d4ff 0%, #0099cc 100%);
             --gradient-2: linear-gradient(135deg, #7c3aed 0%, #5a21b6 100%);
@@ -42,9 +42,10 @@
         }
 
         /* Typography */
-        h1, h2, h3, h4, h5, h6 {
+        h1, h2, h3, h4, h5, h6, p {
             font-weight: 700;
             margin-bottom: 1rem;
+            color: white;
         }
 
         .font-mono {
